--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,51 @@
 @tailwind components;
 @tailwind utilities;
 
-* {}
+:root {
+  --font-scale: 1;
+}
+
+@layer base {
+  :root {
+    --chart-1: oklch(0.646 0.222 41.116);
+    --chart-2: oklch(0.6 0.118 184.704);
+    --chart-3: oklch(0.398 0.07 227.392);
+    --chart-4: oklch(0.828 0.189 84.429);
+    --chart-5: oklch(0.769 0.188 70.08);
+  }
+
+  .dark {
+    --chart-1: oklch(0.488 0.243 264.376);
+    --chart-2: oklch(0.696 0.17 162.48);
+    --chart-3: oklch(0.769 0.188 70.08);
+    --chart-4: oklch(0.627 0.265 303.9);
+    --chart-5: oklch(0.645 0.246 16.439);
+  }
+}
+
+
+body {
+  font-size: calc(16px * var(--font-scale));
+}
+
+h1 {
+  font-size: calc(32px * var(--font-scale));
+}
+
+h2 {
+  font-size: calc(24px * var(--font-scale));
+}
+
+p {
+  font-size: calc(18px * var(--font-scale));
+}
+
+span {
+  font-size: calc(16px * var(--font-scale));
+}
+
+/* и т.д. */
+
 
 .Container {
   width: 1430px;
