--- a/src/index.css
+++ b/src/index.css
@@ -128,3 +128,113 @@ input[type="number"]::-webkit-inner-spin-button {
     box-shadow: 0 0 0 0 rgba(16, 185, 129, 0);
   }
 }
+
+@media (max-width: 1300px) {
+  .header {
+    max-width: 89% !important;
+  }
+}
+
+@media (max-width: 1100px) {
+  .header {
+    max-width: 85% !important;
+  }
+}
+
+@media (max-width: 800px) {
+  .header {
+    max-width: 80% !important;
+  }
+
+  .Analiz {
+    flex-direction: column !important;
+  }
+
+  .Analiz_1 {
+    width: 100%;
+    height: 400px !important;
+  }
+
+  .Analiz_2 {
+    width: 100%;
+  }
+}
+
+@media (max-width: 680px) {
+  .header {
+    max-width: 75% !important;
+  }
+
+  .dashboard_wrapper {
+    flex-wrap: wrap;
+  }
+
+
+}
+
+@media (max-width: 530px) {
+  .WarehouseSidebar {
+    width: 80px !important;
+    padding: 5px
+  }
+
+  .header {
+    left: 90px !important;
+  }
+
+  .WarehouseLayout {
+    padding-left: 90px;
+  }
+
+  .WarehouseSidebar a {
+    padding: 5px;
+  }
+
+  .header {
+    padding: 5px;
+  }
+}
+
+
+@media (max-width: 475px) {
+  .WarehouseSidebar {
+    left: 3px;
+  }
+
+  .WarehouseSidebar svg {
+    width: 20px !important;
+    height: 20px !important;
+  }
+
+  .WarehouseSidebar span {
+    font-size: 10px !important;
+  }
+}
+
+@media (max-width: 380px) {
+  .WarehouseSidebar {
+    width: 70px !important;
+  }
+
+  .header {
+    left: 80px !important;
+  }
+
+  .WarehouseLayout {
+    padding-left: 80px;
+  }
+
+  .iconHeader {
+    display: none;
+  }
+
+  .header__profile_per {
+    padding: 5px 2px !important;
+  }
+}
+
+@media (max-width: 340px) {
+  .backbtn {
+    padding: 10px 10px !important;
+  }
+}
